<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".MainActivity">

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      android:fillViewport="true"
      >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/main_background"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:alpha="0.5"
          android:contentDescription="@string/main_background"
          android:src="@drawable/bg_main"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0" />

      <ImageView
          android:id="@+id/main_logo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/logo_image"
          android:src="@drawable/ic_logo"
          android:layout_margin="28dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/main_subtitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="36dp"
          android:layout_marginTop="18dp"
          android:text="@string/fast_free"
          android:textColor="@color/background_brand"
          android:textAppearance="@style/TextAppearance.RobotoMono.Overline"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/main_logo" />

      <TextView
          android:id="@+id/main_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="36dp"
          android:text="@string/quick_numbers"
          android:textAppearance="@style/TextAppearance.Sora.DisplayMedium"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/main_subtitle" />

      <androidx.fragment.app.FragmentContainerView
          android:id="@+id/main_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="36dp"
          android:name="androidx.navigation.fragment.NavHostFragment"
          app:navGraph="@navigation/main_content_nav_graph"
          app:defaultNavHost="true"
          app:layout_constraintBottom_toTopOf="@+id/main_try_button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/main_title"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/main_try_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="36dp"
          android:background="@drawable/bg_button"
          android:drawableEnd="@drawable/ic_arrow"
          android:text="@string/try_label"
          android:paddingHorizontal="48dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/main_container"
          />

      <LinearLayout
          android:id="@+id/main_first_content"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintTop_toBottomOf="@+id/main_try_button"
          android:layout_marginHorizontal="36dp"
          android:layout_marginTop="80dp"
          >

        <TextView
            android:id="@+id/main_first_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/how_work_the_quick_numbers"
            android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
            android:textColor="@color/content_brand"

            app:drawableStartCompat="@drawable/ic_chat"
            app:drawableTint="@color/content_brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <TextView
            android:id="@+id/main_first_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_numbers_description"
            android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/main_first_info_title"
            />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/main_second_content"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintTop_toBottomOf="@+id/main_first_content"
          android:layout_marginHorizontal="36dp"
          android:layout_marginTop="36dp"
          android:paddingBottom="36dp"
          >

        <TextView
            android:id="@+id/main_second_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/can_i_choose_the_range_of_numbers"
            android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
            android:textColor="@color/content_brand"

            app:drawableStartCompat="@drawable/ic_chat"
            app:drawableTint="@color/content_brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/main_second_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_numbers_description"
            android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/main_second_info_title"
            />

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>