<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/background_primary"
    tools:context=".SortConfig"
    >

    <LinearLayout
        android:id="@+id/frag_title_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/frag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_want_to_draw"
            android:textAppearance="@style/TextAppearance.RobotoFlex.LabelMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frag_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/draw_guide"
            android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_title" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/frag_editText_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:baselineAligned="false"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/frag_title_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numbers"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.LabelMedium"
                android:textColor="@color/content_secondary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp"
                />

            <EditText
                android:id="@+id/frag_editText_amount_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_one"
                android:padding="16dp"
                android:inputType="number"
                android:background="@drawable/bg_edit_text"
                android:textAppearance="@style/TextAppearance.Sora.DisplayMedium"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />

        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.LabelMedium"
                android:textColor="@color/content_secondary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp"
                />

            <EditText
                android:id="@+id/frag_editText_from_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_one"
                android:inputType="number"
                android:padding="16dp"
                android:background="@drawable/bg_edit_text"
                android:textAppearance="@style/TextAppearance.Sora.DisplayMedium"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />

        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.LabelMedium"
                android:textColor="@color/content_secondary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp"
                />

            <EditText
                android:id="@+id/frag_editText_to_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_one"
                android:inputType="number"
                android:padding="16dp"
                android:background="@drawable/bg_edit_text"
                android:textAppearance="@style/TextAppearance.Sora.DisplayMedium"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_switch_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_editText_area"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/frag_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@android:color/white"
            app:trackTint="@color/content_tertiary"
            app:trackDecorationTint="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_repeat_number"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>